trunk/Source/include/GLS_CUDA_API.hpp


//-- type declarations -------------------------------------------------------
typedef void * TCUdeviceptr;


typedef int TCUdevice;


struct DECLSPEC_DRECORD TCUcontext
{
};



typedef TCUcontext *PCUcontext;


struct DECLSPEC_DRECORD TCUmodule
{
};



typedef TCUmodule *PCUmodule;


struct DECLSPEC_DRECORD TCUfunction
{
};



typedef TCUfunction *PCUfunction;


struct DECLSPEC_DRECORD TCUarray
{
};



typedef TCUarray *PCUarray;


struct DECLSPEC_DRECORD TCUtexref
{
};



typedef TCUtexref *PCUtexref;


struct DECLSPEC_DRECORD TCUstream
{
};



typedef TCUstream *PCUstream;


typedef unsigned TCUresult;


struct TCUDA_MEMCPY2D;

typedef TCUDA_MEMCPY2D *PCUDA_MEMCPY2D;


struct DECLSPEC_DRECORD TCUDA_MEMCPY2D
{
public:
	unsigned srcXInBytes;
	unsigned srcY;
	TCUmemorytype srcMemoryType;
	void *srcHost;
	void *srcDevice;
	TCUarray *srcArray;
	unsigned srcPitch;
	unsigned dstXInBytes;
	unsigned dstY;
	TCUmemorytype dstMemoryType;
	void *dstHost;
	void *dstDevice;
	TCUarray *dstArray;
	unsigned dstPitch;
	unsigned WidthInBytes;
	unsigned Height;
};



struct DECLSPEC_DRECORD TCUDA_MEMCPY3D
{
public:
	unsigned srcXInBytes;
	unsigned srcY;
	unsigned srcZ;
	unsigned srcLOD;
	TCUmemorytype srcMemoryType;
	void *srcHost;
	void *srcDevice;
	TCUarray *srcArray;
	void *reserved0;
	unsigned srcPitch;
	unsigned srcHeight;
	unsigned dstXInBytes;
	unsigned dstY;
	unsigned dstZ;
	unsigned dstLOD;
	TCUmemorytype dstMemoryType;
	void *dstHost;
	void *dstDevice;
	TCUarray *dstArray;
	void *reserved1;
	unsigned dstPitch;
	unsigned dstHeight;
	unsigned WidthInBytes;
	unsigned Height;
	unsigned Depth;
};



struct TCUDA_ARRAY_DESCRIPTOR;


struct DECLSPEC_DRECORD TCUDA_ARRAY_DESCRIPTOR
{
public:
	unsigned Width;
	unsigned Height;
	TCUarray_format Format;
	unsigned NumChannels;
};



struct DECLSPEC_DRECORD TCUDA_ARRAY3D_DESCRIPTOR
{
public:
	unsigned Width;
	unsigned Height;
	unsigned Depth;
	TCUarray_format Format;
	unsigned NumChannels;
	unsigned Flags;
};


typedef TCUresult __stdcall (*TcuCtxPushCurrent)(PCUcontext ctx);


typedef TCUresult __stdcall (*TcuCtxPopCurrent)(PCUcontext &pctx);


typedef TCUresult __stdcall (*TcuCtxGetDevice)(int &device);


typedef TCUresult __stdcall (*TcuCtxSynchronize)(void);


typedef TCUresult __stdcall (*TcuModuleLoad)(PCUmodule &module, const char * fname);


typedef TCUresult __stdcall (*TcuModuleLoadData)(PCUmodule &module, const char * image);


typedef TCUresult __stdcall (*TcuModuleLoadDataEx)(PCUmodule &module, void *image, unsigned numOptions, TCUjit_option &options, void *optionValues);


typedef TCUresult __stdcall (*TcuModuleLoadFatBinary)(PCUmodule &module, void *fatCubin);


typedef TCUresult __stdcall (*TcuModuleUnload)(PCUmodule hmod);


typedef TCUresult __stdcall (*TcuModuleGetFunction)(/* out */ PCUfunction &hfunc, PCUmodule hmod, const char * name);


typedef TCUresult __stdcall (*TcuModuleGetGlobal)(/* out */ void * &dptr, unsigned &bytes, PCUmodule hmod, const char * name);


typedef TCUresult __stdcall (*TcuModuleGetTexRef)(/* out */ PCUtexref &pTexRef, PCUmodule hmod, const char * name);


typedef TCUresult __stdcall (*TcuMemGetInfo)(unsigned &free, unsigned &total);


typedef TCUresult __stdcall (*TcuMemAlloc)(void * &dptr, unsigned bytesize);


typedef TCUresult __stdcall (*TcuMemAllocPitch)(void * &dptr, unsigned &pPitch, unsigned WidthInBytes, unsigned Height, unsigned ElementSizeBytes);


typedef TCUresult __stdcall (*TcuMemFree)(void * dptr);


typedef TCUresult __stdcall (*TcuMemGetAddressRange)(void * &pbase, unsigned &psize, void * dptr);


typedef TCUresult __stdcall (*TcuMemAllocHost)(void *pp, unsigned bytesize);


typedef TCUresult __stdcall (*TcuMemFreeHost)(void * p);


typedef TCUresult __stdcall (*TcuMemHostAlloc)(void * &pp, unsigned bytesize, unsigned Flags);


typedef TCUresult __stdcall (*TcuMemHostGetDevicePointer)(void * &pdptr, void * p, unsigned Flags);


typedef TCUresult __stdcall (*TcuMemHostGetFlags)(unsigned &pFlags, void *p);


typedef TCUresult __stdcall (*TcuMemcpyHtoD)(void * dstDevice, const void * srcHost, unsigned ByteCount);


typedef TCUresult __stdcall (*TcuMemcpyDtoH)(const void * dstHost, void * srcDevice, unsigned ByteCount);


typedef TCUresult __stdcall (*TcuMemcpyDtoD)(void * dstDevice, void * srcDevice, unsigned ByteCount);


typedef TCUresult __stdcall (*TcuMemcpyDtoDAsync)(void * dstDevice, void * srcDevice, unsigned ByteCount, PCUstream hStream);


typedef TCUresult __stdcall (*TcuMemcpyDtoA)(PCUarray dstArray, unsigned dstIndex, void * srcDevice, unsigned ByteCount);


typedef TCUresult __stdcall (*TcuMemcpyAtoD)(void * dstDevice, PCUarray hSrc, unsigned SrcIndex, unsigned ByteCount);


typedef TCUresult __stdcall (*TcuMemcpyHtoA)(PCUarray dstArray, unsigned dstIndex, void * pSrc, unsigned ByteCount);


typedef TCUresult __stdcall (*TcuMemcpyAtoH)(void * dstHost, PCUarray srcArray, unsigned SrcIndex, unsigned ByteCount);


typedef TCUresult __stdcall (*TcuMemcpyAtoA)(PCUarray dstArray, unsigned dstIndex, PCUarray srcArray, unsigned SrcIndex, unsigned ByteCount);


typedef TCUresult __stdcall (*TcuMemcpy2D)(const PCUDA_MEMCPY2D pCopy);


typedef TCUresult __stdcall (*TcuMemcpy2DUnaligned)(TCUDA_MEMCPY2D &pCopy);


typedef TCUresult __stdcall (*TcuMemcpy3D)(TCUDA_MEMCPY3D &pCopy);


typedef TCUresult __stdcall (*TcuMemcpyHtoDAsync)(void * dstDevice, void *srcHost, unsigned ByteCount, PCUstream hStream);


typedef TCUresult __stdcall (*TcuMemcpyDtoHAsync)(void *dstHost, void * srcDevice, unsigned ByteCount, PCUstream hStream);


typedef TCUresult __stdcall (*TcuMemcpyHtoAAsync)(PCUarray dstArray, unsigned dstIndex, void *pSrc, unsigned ByteCount, PCUstream hStream);


typedef TCUresult __stdcall (*TcuMemcpyAtoHAsync)(void *dstHost, PCUstream srcArray, unsigned SrcIndex, unsigned ByteCount, PCUstream hStream);


typedef TCUresult __stdcall (*TcuMemcpy2DAsync)(TCUDA_MEMCPY2D &pCopy, PCUstream hStream);


typedef TCUresult __stdcall (*TcuMemcpy3DAsync)(TCUDA_MEMCPY3D &pCopy, PCUstream hStream);


typedef TCUresult __stdcall (*TcuMemsetD8)(void * dstDevice, System::Byte ub, unsigned N);


typedef TCUresult __stdcall (*TcuMemsetD16)(void * dstDevice, System::Word uw, unsigned N);


typedef TCUresult __stdcall (*TcuMemsetD32)(void * dstDevice, unsigned ui, unsigned N);


typedef TCUresult __stdcall (*TcuMemsetD2D8)(void * dstDevice, unsigned dstPitch, System::Byte ub, unsigned Width, unsigned Height);


typedef TCUresult __stdcall (*TcuMemsetD2D16)(void * dstDevice, unsigned dstPitch, System::Word uw, unsigned Width, unsigned Height);


typedef TCUresult __stdcall (*TcuMemsetD2D32)(void * dstDevice, unsigned dstPitch, unsigned ui, unsigned Width, unsigned Height);


typedef TCUresult __stdcall (*TcuFuncSetBlockShape)(PCUfunction hfunc, int x, int y, int z);


typedef TCUresult __stdcall (*TcuFuncSetSharedSize)(PCUfunction hfunc, unsigned bytes);


typedef TCUresult __stdcall (*TcuFuncGetAttribute)(int &pi, TCUfunction_attribute attrib, PCUfunction hfunc);


typedef TCUresult __stdcall (*TcuArrayCreate)(PCUarray &pHandle, TCUDA_ARRAY_DESCRIPTOR &pAllocateArray);


typedef TCUresult __stdcall (*TcuArrayGetDescriptor)(TCUDA_ARRAY_DESCRIPTOR &pArrayDescriptor, PCUarray hArray);


typedef TCUresult __stdcall (*TcuArrayDestroy)(PCUarray hArray);


typedef TCUresult __stdcall (*TcuArray3DCreate)(PCUarray &pHandle, TCUDA_ARRAY3D_DESCRIPTOR &pAllocateArray);


typedef TCUresult __stdcall (*TcuArray3DGetDescriptor)(TCUDA_ARRAY3D_DESCRIPTOR &pArrayDescriptor, PCUarray hArray);


typedef TCUresult __stdcall (*TcuTexRefCreate)(PCUtexref &pTexRef);


typedef TCUresult __stdcall (*TcuTexRefDestroy)(PCUtexref hTexRef);


typedef TCUresult __stdcall (*TcuTexRefSetArray)(PCUtexref hTexRef, PCUarray hArray, unsigned Flags);

static const System::Byte CUDA_ERROR_INVALID_IMAGE = System::Byte(0xc8);

static const System::Byte CUDA_ERROR_INVALID_CONTEXT = System::Byte(0xc9);

static const System::Byte CUDA_ERROR_CONTEXT_ALREADY_CURRENT = System::Byte(0xca);

static const System::Byte CUDA_ERROR_MAP_FAILED = System::Byte(0xcd);

static const System::Byte CUDA_ERROR_UNMAP_FAILED = System::Byte(0xce);

static const System::Byte CUDA_ERROR_ARRAY_IS_MAPPED = System::Byte(0xcf);

static const System::Byte CUDA_ERROR_ALREADY_MAPPED = System::Byte(0xd0);

static const System::Byte CUDA_ERROR_NO_BINARY_FOR_GPU = System::Byte(0xd1);

static const System::Byte CUDA_ERROR_ALREADY_ACQUIRED = System::Byte(0xd2);

static const System::Byte CUDA_ERROR_NOT_MAPPED = System::Byte(0xd3);

static const System::Byte CUDA_ERROR_NOT_MAPPED_AS_ARRAY = System::Byte(0xd4);

static const System::Byte CUDA_ERROR_NOT_MAPPED_AS_POINTER = System::Byte(0xd5);

static const System::Word CUDA_ERROR_INVALID_SOURCE = System::Word(0x12c);

static const System::Word CUDA_ERROR_FILE_NOT_FOUND = System::Word(0x12d);

static const System::Word CUDA_ERROR_INVALID_HANDLE = System::Word(0x190);

static const System::Word CUDA_ERROR_NOT_FOUND = System::Word(0x1f4);

static const System::Word CUDA_ERROR_NOT_READY = System::Word(0x258);

static const System::Word CUDA_ERROR_LAUNCH_FAILED = System::Word(0x2bc);

static const System::Word CUDA_ERROR_LAUNCH_OUT_OF_RESOURCES = System::Word(0x2bd);

static const System::Word CUDA_ERROR_LAUNCH_TIMEOUT = System::Word(0x2be);

static const System::Word CUDA_ERROR_LAUNCH_INCOMPATIBLE_TEXTURING = System::Word(0x2bf);

static const System::Word CUDA_ERROR_POINTER_IS_64BIT = System::Word(0x320);

static const System::Word CUDA_ERROR_SIZE_IS_64BIT = System::Word(0x321);

static const System::Word CUDA_ERROR_UNKNOWN = System::Word(0x3e7);

extern PACKAGE TcuCtxPushCurrent cuCtxPushCurrent;

extern PACKAGE TcuCtxPopCurrent cuCtxPopCurrent;

extern PACKAGE TcuCtxGetDevice cuCtxGetDevice;

extern PACKAGE TcuCtxSynchronize cuCtxSynchronize;

extern PACKAGE TcuModuleLoad cuModuleLoad;

extern PACKAGE TcuModuleLoadData cuModuleLoadData;

extern PACKAGE TcuModuleLoadDataEx cuModuleLoadDataEx;

extern PACKAGE TcuModuleLoadFatBinary cuModuleLoadFatBinary;

extern PACKAGE TcuModuleUnload cuModuleUnload;

extern PACKAGE TcuModuleGetFunction cuModuleGetFunction;

extern PACKAGE TcuModuleGetGlobal cuModuleGetGlobal;

extern PACKAGE TcuModuleGetTexRef cuModuleGetTexRef;

extern PACKAGE TcuMemGetInfo cuMemGetInfo;

extern PACKAGE TcuMemAlloc cuMemAlloc;

extern PACKAGE TcuMemAllocPitch cuMemAllocPitch;

extern PACKAGE TcuMemFree cuMemFree;

extern PACKAGE TcuMemGetAddressRange cuMemGetAddressRange;

extern PACKAGE TcuMemAllocHost cuMemAllocHost;

extern PACKAGE TcuMemFreeHost cuMemFreeHost;

extern PACKAGE TcuMemHostAlloc cuMemHostAlloc;

extern PACKAGE TcuMemHostGetDevicePointer cuMemHostGetDevicePointer;

extern PACKAGE TcuMemHostGetFlags cuMemHostGetFlags;

extern PACKAGE TcuMemcpyHtoD cuMemcpyHtoD;

extern PACKAGE TcuMemcpyDtoH cuMemcpyDtoH;

extern PACKAGE TcuMemcpyDtoD cuMemcpyDtoD;

extern PACKAGE TcuMemcpyDtoDAsync cuMemcpyDtoDAsync;

extern PACKAGE TcuMemcpyDtoA cuMemcpyDtoA;

extern PACKAGE TcuMemcpyAtoD cuMemcpyAtoD;

extern PACKAGE TcuMemcpyHtoA cuMemcpyHtoA;

extern PACKAGE TcuMemcpyAtoH cuMemcpyAtoH;

extern PACKAGE TcuMemcpyAtoA cuMemcpyAtoA;

extern PACKAGE TcuMemcpy2D cuMemcpy2D;

extern PACKAGE TcuMemcpy2DUnaligned cuMemcpy2DUnaligned;

extern PACKAGE TcuMemcpy3D cuMemcpy3D;

extern PACKAGE TcuMemcpyHtoDAsync cuMemcpyHtoDAsync;

extern PACKAGE TcuMemcpyDtoHAsync cuMemcpyDtoHAsync;

extern PACKAGE TcuMemcpyHtoAAsync cuMemcpyHtoAAsync;

extern PACKAGE TcuMemcpyAtoHAsync cuMemcpyAtoHAsync;

extern PACKAGE TcuMemcpy2DAsync cuMemcpy2DAsync;

extern PACKAGE TcuMemcpy3DAsync cuMemcpy3DAsync;

extern PACKAGE TcuMemsetD8 cuMemsetD8;

extern PACKAGE TcuMemsetD16 cuMemsetD16;

extern PACKAGE TcuMemsetD32 cuMemsetD32;

extern PACKAGE TcuMemsetD2D8 cuMemsetD2D8;

extern PACKAGE TcuMemsetD2D16 cuMemsetD2D16;

extern PACKAGE TcuMemsetD2D32 cuMemsetD2D32;

extern PACKAGE TcuFuncSetBlockShape cuFuncSetBlockShape;

extern PACKAGE TcuFuncSetSharedSize cuFuncSetSharedSize;

extern PACKAGE TcuFuncGetAttribute cuFuncGetAttribute;

extern PACKAGE TcuArrayCreate cuArrayCreate;

extern PACKAGE TcuArrayGetDescriptor cuArrayGetDescriptor;

extern PACKAGE TcuArrayDestroy cuArrayDestroy;

extern PACKAGE TcuArray3DCreate cuArray3DCreate;

extern PACKAGE TcuArray3DGetDescriptor cuArray3DGetDescriptor;

extern PACKAGE TcuTexRefCreate cuTexRefCreate;

extern PACKAGE TcuTexRefDestroy cuTexRefDestroy;

extern PACKAGE TcuTexRefSetArray cuTexRefSetArray;