tags/GLScene v1.1/Source/ComputeAPIs/GLS_CUDA_API.pas


  cuCtxPushCurrent: function(ctx: PCUcontext): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuCtxPopCurrent: function(var pctx: PCUcontext): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuCtxGetDevice: function(var device: TCUdevice): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuCtxSynchronize: function: TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  /////////////////////////////////////
  ////
  ////    Module management
  ////
  //////////////////////////////////*/

  cuModuleLoad: function(var module: PCUmodule; const fname: PAnsiChar):
    TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuModuleLoadData: function(var module: PCUmodule; const image: PAnsiChar):
    TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuModuleLoadDataEx: function(var module: PCUmodule; var image; numOptions:
    Cardinal; var options: TCUjit_option; var optionValues):
    TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuModuleLoadFatBinary: function(var module: PCUmodule; var fatCubin):
    TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuModuleUnload: function(hmod: PCUmodule): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuModuleGetFunction: function(var hfunc: PCUfunction; hmod: PCUmodule; const
    name: PAnsiChar): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuModuleGetGlobal: function(var dptr: TCUdeviceptr; var bytes: Cardinal; hmod:
    PCUmodule; const name: PAnsiChar): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuModuleGetTexRef: function(var pTexRef: PCUtexref; hmod: PCUmodule; const
    name: PAnsiChar): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  ///////////////////////////////////////
  ////
  ////    Memory management
  ////
  ////////////////////////////////////*/

  cuMemGetInfo: function(var free: Cardinal; var total: Cardinal): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuMemAlloc: function(var dptr: TCUdeviceptr; bytesize: Cardinal): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuMemAllocPitch: function(var dptr: TCUdeviceptr;
    var pPitch: Cardinal;
    WidthInBytes: Cardinal;
    Height: Cardinal;
    // size of biggest r/w to be performed by kernels on this memory
    // 4; 8 or 16 bytes
    ElementSizeBytes: Cardinal
    ): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuMemFree: function(dptr: TCUdeviceptr): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuMemGetAddressRange: function(var pbase: TCUdeviceptr; var psize: Cardinal;
    dptr: TCUdeviceptr): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuMemAllocHost: function(var pp; bytesize: Cardinal): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuMemFreeHost: function(p: Pointer): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuMemHostAlloc: function(var pp; bytesize: Cardinal; Flags: Cardinal):
    TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuMemHostGetDevicePointer: function(var pdptr: TCUdeviceptr; var p; Flags:
    Cardinal): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuMemHostGetFlags: function(var pFlags: Cardinal; var p): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  ///////////////////////////////////////
  ////
  ////    Synchronous Memcpy
  ////
  //// : Integerra-device memcpy's done with these functions may execute in parallel with the CPU;
  //// but if host memory is involved; they wait until the copy is done before returning.
  ////
  ////////////////////////////////////*/

  // 1D functions
        // system <-> device memory
  cuMemcpyHtoD: function(dstDevice: TCUdeviceptr; const srcHost: Pointer; ByteCount:
    Cardinal): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuMemcpyDtoH: function(const dstHost: Pointer; srcDevice: TCUdeviceptr; ByteCount:
    Cardinal): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  // device <-> device memory
  cuMemcpyDtoD: function(dstDevice: TCUdeviceptr; srcDevice: TCUdeviceptr;
    ByteCount: Cardinal): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  // device <-> device memory
  cuMemcpyDtoDAsync: function(dstDevice: TCUdeviceptr;
    srcDevice: TCUdeviceptr; ByteCount: Cardinal; hStream: PCUstream): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  // device <-> array memory
  cuMemcpyDtoA: function(dstArray: PCUarray; dstIndex: Cardinal; srcDevice:
    TCUdeviceptr; ByteCount: Cardinal): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuMemcpyAtoD: function(dstDevice: TCUdeviceptr; hSrc: PCUarray; SrcIndex:
    Cardinal; ByteCount: Cardinal): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  // system <-> array memory
  cuMemcpyHtoA: function(dstArray: PCUarray; dstIndex: Cardinal; pSrc: Pointer;
    ByteCount: Cardinal): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuMemcpyAtoH: function(dstHost: Pointer; srcArray: PCUarray; srcIndex: Cardinal;
    ByteCount: Cardinal): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  // array <-> array memory
  cuMemcpyAtoA: function(dstArray: PCUarray; dstIndex: Cardinal; srcArray:
    PCUarray; srcIndex: Cardinal; ByteCount: Cardinal):
    TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  // 2D memcpy

  cuMemcpy2D: function(const pCopy: PCUDA_MEMCPY2D):
    TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuMemcpy2DUnaligned: function(var pCopy: TCUDA_MEMCPY2D): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  // 3D memcpy

  cuMemcpy3D: function(var pCopy: TCUDA_MEMCPY3D): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  ///////////////////////////////////////
  ////
  ////    Asynchronous Memcpy
  ////
  //// Any host memory involved must be DMA'able (e.g.; allocated with cuMemAllocHost).
  //// memcpy's done with these functions execute in parallel with the CPU and; if
  //// the hardware is available; may execute in parallel with the GPU.
  //// Asynchronous memcpy must be accompanied by appropriate stream synchronization.
  ////
  ////////////////////////////////////*/

  // 1D functions
        // system <-> device memory
  cuMemcpyHtoDAsync: function(dstDevice: TCUdeviceptr;
    var srcHost; ByteCount: Cardinal; hStream: PCUstream): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuMemcpyDtoHAsync: function(var dstHost;
    srcDevice: TCUdeviceptr; ByteCount: Cardinal; hStream: PCUstream):
    TCUresult{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  // system <-> array memory
  cuMemcpyHtoAAsync: function(dstArray: PCUarray; dstIndex: Cardinal;
    var pSrc; ByteCount: Cardinal; hStream: PCUstream): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuMemcpyAtoHAsync: function(var dstHost; srcArray: PCUstream; srcIndex:
    Cardinal;
    ByteCount: Cardinal; hStream: PCUstream): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  // 2D memcpy
  cuMemcpy2DAsync: function(var pCopy: TCUDA_MEMCPY2D; hStream: PCUstream):
    TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  // 3D memcpy
  cuMemcpy3DAsync: function(var pCopy: TCUDA_MEMCPY3D; hStream: PCUstream):
    TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  ///////////////////////////////////////
  ////
  ////    Memset
  ////
  ////////////////////////////////////*/
  cuMemsetD8: function(dstDevice: TCUdeviceptr; ub: Byte; N: Cardinal):
    TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuMemsetD16: function(dstDevice: TCUdeviceptr; uw: Word; N: Cardinal):
    TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuMemsetD32: function(dstDevice: TCUdeviceptr; ui: Cardinal; N: Cardinal):
    TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuMemsetD2D8: function(dstDevice: TCUdeviceptr; dstPitch: Cardinal; ub: Byte;
    Width: Cardinal; Height: Cardinal): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuMemsetD2D16: function(dstDevice: TCUdeviceptr; dstPitch: Cardinal; uw: Word;
    Width: Cardinal; Height: Cardinal): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuMemsetD2D32: function(dstDevice: TCUdeviceptr; dstPitch: Cardinal; ui:
    Cardinal; Width: Cardinal; Height: Cardinal): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  ///////////////////////////////////////
  ////
  ////    management
  ////
  ////////////////////////////////////*/

  cuFuncSetBlockShape: function(hfunc: PCUfunction; x: Integer; y: Integer; z:
    Integer): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuFuncSetSharedSize: function(hfunc: PCUfunction; bytes: Cardinal): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuFuncGetAttribute: function(var pi: Integer; attrib: TCUfunction_attribute;
    hfunc: PCUfunction): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  ///////////////////////////////////////
  ////
  ////    Array management
  ////
  ////////////////////////////////////*/

  cuArrayCreate: function(var pHandle: PCUarray; var pAllocateArray:
    TCUDA_ARRAY_DESCRIPTOR): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuArrayGetDescriptor: function(var pArrayDescriptor: TCUDA_ARRAY_DESCRIPTOR;
    hArray: PCUarray): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuArrayDestroy: function(hArray: PCUarray): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuArray3DCreate: function(var pHandle: PCUarray; var pAllocateArray:
    TCUDA_ARRAY3D_DESCRIPTOR): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuArray3DGetDescriptor: function(var pArrayDescriptor:
    TCUDA_ARRAY3D_DESCRIPTOR; hArray: PCUarray): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  ///////////////////////////////////////
  ////
  ////    Texture reference management
  ////
  ////////////////////////////////////*/
  cuTexRefCreate: function(var pTexRef: PCUtexref): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuTexRefDestroy: function(hTexRef: PCUtexref): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuTexRefSetArray: function(hTexRef: PCUtexref; hArray: PCUarray; Flags:
    Cardinal): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}
